[gd_scene load_steps=7 format=3 uid="uid://start_screen"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1_start"]
[ext_resource type="Texture2D" uid="uid://dxtekqrfx4wb5" path="res://assets/master_chief.png" id="master_chief_texture"]
[ext_resource type="Texture2D" path="res://assets/elite.png" id="enemy_texture"]
[ext_resource type="AudioStream" path="res://assets/title_song.mp3" id="title_music"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 48
font_color = Color(0.3, 0.6, 1, 1)
outline_size = 2
outline_color = Color(0.1, 0.2, 0.4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 24
font_color = Color(0.7, 0.8, 1, 1)
outline_size = 1
outline_color = Color(0.1, 0.2, 0.4, 1)

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_start")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("title_music")
autoplay = true
volume_db = -10.0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.05, 1)

[node name="FruitDecorations" type="Node2D" parent="."]

[node name="Watermelon1" type="ColorRect" parent="FruitDecorations"]
position = Vector2(150, 225)
size = Vector2(90, 60)
color = Color(0.8, 0.2, 0.2, 0.8)

[node name="Watermelon2" type="ColorRect" parent="FruitDecorations"]
position = Vector2(1650, 300)
size = Vector2(75, 52)
color = Color(0.7, 0.15, 0.15, 0.7)

[node name="Apple1" type="ColorRect" parent="FruitDecorations"]
position = Vector2(300, 150)
size = Vector2(45, 45)
color = Color(0.8, 0.1, 0.1, 0.8)

[node name="Apple2" type="ColorRect" parent="FruitDecorations"]
position = Vector2(1500, 180)
size = Vector2(37, 37)
color = Color(0.7, 0.1, 0.1, 0.7)

[node name="Pineapple1" type="ColorRect" parent="FruitDecorations"]
position = Vector2(225, 450)
size = Vector2(60, 75)
color = Color(0.9, 0.8, 0.2, 0.8)

[node name="Pineapple2" type="ColorRect" parent="FruitDecorations"]
position = Vector2(1575, 525)
size = Vector2(52, 67)
color = Color(0.8, 0.7, 0.15, 0.7)

[node name="Banana1" type="ColorRect" parent="FruitDecorations"]
position = Vector2(450, 375)
size = Vector2(37, 60)
color = Color(0.9, 0.8, 0.1, 0.8)

[node name="Banana2" type="ColorRect" parent="FruitDecorations"]
position = Vector2(1425, 420)
size = Vector2(30, 52)
color = Color(0.8, 0.7, 0.1, 0.7)

[node name="BloodSplatters" type="Node2D" parent="."]

[node name="BloodSplatter1" type="ColorRect" parent="BloodSplatters"]
position = Vector2(120, 210)
size = Vector2(22, 15)
color = Color(0.6, 0.1, 0.1, 0.9)

[node name="BloodSplatter2" type="ColorRect" parent="BloodSplatters"]
position = Vector2(135, 217)
size = Vector2(12, 9)
color = Color(0.7, 0.1, 0.1, 0.8)

[node name="BloodSplatter3" type="ColorRect" parent="BloodSplatters"]
position = Vector2(127, 225)
size = Vector2(18, 12)
color = Color(0.5, 0.05, 0.05, 0.9)

[node name="BloodSplatter4" type="ColorRect" parent="BloodSplatters"]
position = Vector2(1120, 190)
size = Vector2(10, 7)
color = Color(0.6, 0.1, 0.1, 0.9)

[node name="BloodSplatter5" type="ColorRect" parent="BloodSplatters"]
position = Vector2(1115, 195)
size = Vector2(6, 4)
color = Color(0.7, 0.1, 0.1, 0.8)

[node name="BloodSplatter6" type="ColorRect" parent="BloodSplatters"]
position = Vector2(1125, 200)
size = Vector2(9, 6)
color = Color(0.5, 0.05, 0.05, 0.9)

[node name="BloodSplatter7" type="ColorRect" parent="BloodSplatters"]
position = Vector2(190, 90)
size = Vector2(11, 8)
color = Color(0.6, 0.1, 0.1, 0.9)

[node name="BloodSplatter8" type="ColorRect" parent="BloodSplatters"]
position = Vector2(195, 95)
size = Vector2(7, 5)
color = Color(0.7, 0.1, 0.1, 0.8)

[node name="BloodSplatter9" type="ColorRect" parent="BloodSplatters"]
position = Vector2(200, 100)
size = Vector2(13, 9)
color = Color(0.5, 0.05, 0.05, 0.9)

[node name="BloodSplatter10" type="ColorRect" parent="BloodSplatters"]
position = Vector2(990, 110)
size = Vector2(8, 6)
color = Color(0.6, 0.1, 0.1, 0.9)

[node name="BloodSplatter11" type="ColorRect" parent="BloodSplatters"]
position = Vector2(995, 115)
size = Vector2(5, 3)
color = Color(0.7, 0.1, 0.1, 0.8)

[node name="BloodSplatter12" type="ColorRect" parent="BloodSplatters"]
position = Vector2(1005, 120)
size = Vector2(10, 7)
color = Color(0.5, 0.05, 0.05, 0.9)

[node name="BloodSplatter13" type="ColorRect" parent="BloodSplatters"]
position = Vector2(600, 400)
size = Vector2(20, 15)
color = Color(0.6, 0.1, 0.1, 0.9)

[node name="BloodSplatter14" type="ColorRect" parent="BloodSplatters"]
position = Vector2(610, 410)
size = Vector2(12, 8)
color = Color(0.7, 0.1, 0.1, 0.8)

[node name="BloodSplatter15" type="ColorRect" parent="BloodSplatters"]
position = Vector2(590, 405)
size = Vector2(8, 6)
color = Color(0.5, 0.05, 0.05, 0.9)

[node name="BloodSplatter16" type="ColorRect" parent="BloodSplatters"]
position = Vector2(620, 415)
size = Vector2(15, 10)
color = Color(0.6, 0.1, 0.1, 0.9)

[node name="BloodSplatter17" type="ColorRect" parent="BloodSplatters"]
position = Vector2(580, 420)
size = Vector2(10, 7)
color = Color(0.7, 0.1, 0.1, 0.8)

[node name="Stars" type="Node2D" parent="."]

[node name="Star1" type="ColorRect" parent="Stars"]
position = Vector2(150, 120)
size = Vector2(3, 3)
color = Color(1, 1, 1, 0.8)

[node name="Star2" type="ColorRect" parent="Stars"]
position = Vector2(300, 180)
size = Vector2(1, 1)
color = Color(1, 1, 1, 0.6)

[node name="Star3" type="ColorRect" parent="Stars"]
position = Vector2(450, 90)
size = Vector2(3, 3)
color = Color(1, 1, 1, 0.7)

[node name="Star4" type="ColorRect" parent="Stars"]
position = Vector2(600, 150)
size = Vector2(1, 1)
color = Color(1, 1, 1, 0.5)

[node name="Star5" type="ColorRect" parent="Stars"]
position = Vector2(750, 120)
size = Vector2(3, 3)
color = Color(1, 1, 1, 0.8)

[node name="Star6" type="ColorRect" parent="Stars"]
position = Vector2(900, 210)
size = Vector2(1, 1)
color = Color(1, 1, 1, 0.6)

[node name="Star7" type="ColorRect" parent="Stars"]
position = Vector2(1050, 105)
size = Vector2(3, 3)
color = Color(1, 1, 1, 0.7)

[node name="Star8" type="ColorRect" parent="Stars"]
position = Vector2(1200, 165)
size = Vector2(1, 1)
color = Color(1, 1, 1, 0.5)

[node name="Star9" type="ColorRect" parent="Stars"]
position = Vector2(1350, 135)
size = Vector2(3, 3)
color = Color(1, 1, 1, 0.8)

[node name="Star10" type="ColorRect" parent="Stars"]
position = Vector2(1500, 195)
size = Vector2(1, 1)
color = Color(1, 1, 1, 0.6)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 225.0
text = "WATERMELON HUNTER"
horizontal_alignment = 1
vertical_alignment = 1
label_settings = SubResource("LabelSettings_1")

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_top = 225.0
offset_right = 450.0
offset_bottom = 270.0
text = "A Tale of Fruit and Flesh"
horizontal_alignment = 1
vertical_alignment = 1
label_settings = SubResource("LabelSettings_2")

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "START GAME"
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "QUIT"
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="AnimatedCharacters" type="Node2D" parent="."]

[node name="MainCharacter" type="Node2D" parent="AnimatedCharacters"]
position = Vector2(-200, 900)

[node name="Sprite" type="Sprite2D" parent="AnimatedCharacters/MainCharacter"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("master_chief_texture")

[node name="SpeechBubble" type="Control" parent="AnimatedCharacters/MainCharacter"]
layout_mode = 3
anchors_preset = 0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -60.0
visible = false

[node name="Background" type="NinePatchRect" parent="AnimatedCharacters/MainCharacter/SpeechBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="Label" parent="AnimatedCharacters/MainCharacter/SpeechBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
text = "Die You Veggie Scum!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy1" type="Node2D" parent="AnimatedCharacters"]
position = Vector2(100, 900)

[node name="Sprite" type="Sprite2D" parent="AnimatedCharacters/Enemy1"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("enemy_texture")

[node name="Enemy2" type="Node2D" parent="AnimatedCharacters"]
position = Vector2(150, 900)

[node name="Sprite" type="Sprite2D" parent="AnimatedCharacters/Enemy2"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("enemy_texture")

[node name="Enemy3" type="Node2D" parent="AnimatedCharacters"]
position = Vector2(200, 900)

[node name="Sprite" type="Sprite2D" parent="AnimatedCharacters/Enemy3"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("enemy_texture") 